--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
@@ -3,11 +3,11 @@
         <div class="row row-cols-md-4 g-4 ms-4">
             @for (producto of dataProductos; track $index) {
             <div class="col card m-1">
-                <div class="card-body me-5 text-start">
+                <div class="card-body me-3 text-start">
                     <img
                         [src]="producto.imagen"
-                        width="250"
-                        class="mb-1"
+                        width="300"
+                        class="mb-1 p-0"
                         alt=""
                     />
                     <h5 class="card-title titulo">{{ producto.producto }}</h5>
