--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/estadisticas/estadisticas.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/estadisticas/estadisticas.component.html
@@ -25,4 +25,18 @@
             </div>
         </div>
     </div>
+    <div class="d-flex mt-3 justify-content-center">
+        <div class="card" style="width: 40rem">
+            <canvas id="myChart"></canvas>
+            <div class="card-body">
+                <p class="card-text fs-5 fw-bolder">VENTAS DIARIAS</p>
+            </div>
+        </div>
+        <div class="card ms-5" style="width: 40rem">
+            <canvas id="myChart6"></canvas>
+            <div class="card-body">
+                <p class="card-text fs-5 fw-bolder">VENTAS POR HORA</p>
+            </div>
+        </div>
+    </div>
 </section>
