--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -1,5 +1,6 @@
 <section class="fondo_principal">
-    <!-- Titulo y Botón de Registro -->
+    <section>
+        <!-- Titulo y Botón de Registro -->
     <div class="d-flex justify-content-end align-items-center titulo">
         <button type="button" class="titulo fw-bolder fs-5 btn btn- d-flex" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             Registrarse
@@ -60,13 +61,13 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/icono_pizza.png" class="d-block w-25 " alt="...">
+                            <img src="img/icono_pizza.png" class="d-block w-25 mx-auto" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/camisa.png" class="d-block w-25 " alt="...">
+                            <img src="img/camisa.png" class="d-block w-25 mx-auto" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/copas.png" class="d-block w-25 " alt="...">
+                            <img src="img/copas.png" class="d-block w-25 mx-auto" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -119,4 +120,6 @@
         autoplaySpeed: 2000,
     });
 </script>
+    </section>
+
 
