--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -1,4 +1,5 @@
 <section>
+    <div class="fondo_principal">
 
     <!-- Button trigger modal -->
 
@@ -52,9 +53,7 @@
 
 
 
-</section>
-
-<div class="row">
+    <div class="row">
     <div class="col-4 offset-4 columna-menu">
         <section class="d-flex justify-content-center align-items-center flex-column h-100">
             <img class="img1" src="img/LOGO STADISTIC.png" alt="">
@@ -85,9 +84,9 @@
             </section>
         </section>
     </div>
-</div>
+    </div>
 
-<section class="d-flex">
+    <section class="d-flex">
     <div>
         <button class="boton1">
             <i class="fa-brands fa-facebook h1"></i>
@@ -103,22 +102,25 @@
             <i class="fa-brands fa-twitter h1"></i>
         </button>
     </div>
-</section>
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
-    integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
-<script>
-    $(".slider-opciones").slick({
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 2000,
-    });
-</script>
+
+        </section>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+        integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script>
+        $(".slider-opciones").slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+        });
+    </script>
