--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/agregar-producto/agregar-producto.component.html
@@ -58,7 +58,7 @@
                     type="button"
                     class="btn-close"
                     data-bs-dismiss="modal"
-                    aria-label="Close"
+                    aria-label="Close"n
                 ></button>
             </div>
             <div class="modal-body">
